GET subfolders of folderId endpoint
